fixed NPE in base controller due to afterInit now actually being called